fix: correcon de imagenes

--- a/src/app/public/pages/grupos-musculares-detalle/grupos-musculares-detalle.component.html
+++ b/src/app/public/pages/grupos-musculares-detalle/grupos-musculares-detalle.component.html
@@ -49,7 +49,7 @@
               <div class="position-relative overflow-hidden rounded-top">
                 <img
                   class="img-fluid w-100"
-                  [src]="getImageSrc(rutina.miniatura)"
+                 [src]="rutina.miniatura ? rutina.miniatura: 'https://firebasestorage.googleapis.com/v0/b/infinitytech-15a41.appspot.com/o/No-image-available.png?alt=media&token=de21f50b-2b3d-45eb-89a8-7df19227cd04'"
                   alt="Miniatura"
                 />
               </div>
