--- a/src/app/public/pages/grupos-musculares/grupos-musculares.component.html
+++ b/src/app/public/pages/grupos-musculares/grupos-musculares.component.html
@@ -8,10 +8,13 @@
       <div class="blog-item">
         <div class="position-relative overflow-hidden rounded-top">
           <img
-          class="img-fluid"
-          [src]="getImageSrc(rutina.imagen)"
-          alt=""
-        />
+  class="img-fluid"
+  loading="lazy"
+  [src]="rutina.imagen ? rutina.imagen : 'https://firebasestorage.googleapis.com/v0/b/infinitytech-15a41.appspot.com/o/IMAGENES%20PAGINA%2FPRUEBA%20WEBP%2FNo-image-available.webp?alt=media&token=9158cc1f-8310-4f0c-a967-f0bc4d6cccf6'"
+  alt=""
+/>
+
+
 
         </div>
         <div class="bg-dark d-flex align-items-center rounded-bottom p-3">
