--- a/src/app/public/pages/videos-all/videos-all.component.html
+++ b/src/app/public/pages/videos-all/videos-all.component.html
@@ -31,43 +31,50 @@
         [(ngModel)]="searchText"
         (input)="filterVideos()"
       />
-         <!-- Menú desplegable de grupos musculares -->
-         <select class="form-select" [(ngModel)]="selectedGroup" (change)="filterVideos()">
-          <option value="">Filtros</option>
-          <option *ngFor="let grupo of GM" [value]="grupo.id">{{ grupo.nombre }}</option>
-        </select>
+      <!-- Menú desplegable de grupos musculares -->
+      <select
+        class="form-select"
+        [(ngModel)]="selectedGroup"
+        (change)="filterVideos()"
+      >
+        <option value="">Filtros</option>
+        <option *ngFor="let grupo of GM" [value]="grupo.id">
+          {{ grupo.nombre }}
+        </option>
+      </select>
       <button class="btn btn-primary px-4">
         <i class="bi bi-search"></i>
       </button>
     </div>
   </div>
-<div
-  class="row g-5 mt-3"
-  (window:scroll)="onScroll()"
->
-  <div class="col-lg-3" *ngFor="let rutina of filteredVideos">
-    <div class="blog-item">
-      <div class="position-relative overflow-hidden rounded-top">
-        <img class="img-fluid" [src]="getImageSrc(rutina.miniatura)" alt="" />
-      </div>
-      <div class="bg-dark d-flex align-items-center rounded-bottom p-3">
-        <a
-          class="h5 text-uppercase text-light"
-          [href]="'/pages/grupos-musculares/video/' + rutina.id"
-        >
-          {{ rutina.nombre }}
-        </a>
+  <div class="row g-5 mt-3" (window:scroll)="onScroll()">
+    <div class="col-lg-3" *ngFor="let rutina of filteredVideos">
+      <div class="blog-item">
+        <div class="position-relative overflow-hidden rounded-top">
+          <img
+          class="img-fluid"
+          [src]="getMiniaturaSrc(rutina.miniatura)"
+          alt="Miniatura"
+        />
+
+        </div>
+        <div class="bg-dark d-flex align-items-center rounded-bottom p-3">
+          <a
+            class="h5 text-uppercase text-light"
+            [href]="'/pages/grupos-musculares/video/' + rutina.id"
+          >
+            {{ rutina.nombre }}
+          </a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Optional: loader visual abajo -->
-  <div class="text-center" *ngIf="loadingVIDEOS">
-    <div class="spinner-border text-primary" role="status"></div>
-    <p class="mt-2">Cargando más videos...</p>
+    <!-- Optional: loader visual abajo -->
+    <div class="text-center" *ngIf="loadingVIDEOS">
+      <div class="spinner-border text-primary" role="status"></div>
+      <p class="mt-2">Cargando más videos...</p>
+    </div>
   </div>
-</div>
-
 </div>
 <ng-template #loader2>
   <div class="text-center" style="margin-top: 5%">
