--- a/src/app/public/pages/rutinas/rutinas-public/rutinas-publicas/rutinas-publicas.component.html
+++ b/src/app/public/pages/rutinas/rutinas-public/rutinas-publicas/rutinas-publicas.component.html
@@ -19,11 +19,10 @@
       <div class="blog-item h-100 d-flex flex-column justify-content-between">
         <div class="position-relative overflow-hidden rounded-top">
           <img
-            class="img-fluid w-100"
-            [src]="'data:image/jpeg;base64,' + rutina.imagen"
-            alt=""
-           style="object-fit: contain; height: 300px; background-color: #000;"
-          />
+          class="img-fluid"
+          [src]="getMiniaturaSrc(rutina.imagen)"
+          alt="Miniatura"
+        />
         </div>
         <div class="bg-dark d-flex align-items-center rounded-bottom p-4">
           <a
