--- a/src/app/public/contact/contact.component.html
+++ b/src/app/public/contact/contact.component.html
@@ -41,7 +41,7 @@
           <i class="fa fa-envelope fs-4 text-white"></i>
         </div>
         <h5 class="text-uppercase text-primary">Envianos un email</h5>
-        <p class="text-secondary mb-0"></p>
+        <p class="text-secondary mb-0">berna_zepeda@hotmail.com</p>
       </div>
     </div>
     <div class="col-lg-4">
